--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --secondary: 85 85 85;
   --tertiary: 153 153 153;
   --surface: 246 246 246;
+  --heading: 51 51 51;
   --link-hover: #2563eb;
 }
 
@@ -15,6 +16,7 @@
   --secondary: 115 115 115;
   --tertiary: 153 153 153;
   --surface: 40 40 40;
+  --heading: 204 204 204;
   --link-hover: #60a5fa;
 }
 
@@ -49,6 +51,10 @@ h1, h2, h3 {
 
 .text-tertiary {
   color: rgb(var(--tertiary));
+}
+
+.text-heading {
+  color: rgb(var(--heading));
 }
 
 .bg-background {
