--- a/app/globals.css
+++ b/app/globals.css
@@ -88,11 +88,16 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-display: swap;
 }
 
-h1, h2, h3 {
+h1, h3 {
   font-weight: 400;
-  letter-spacing: -0.01em;
+}
+
+h2{
+  font-weight: 500;
+  color: rgb(var(--heading));
 }
 
 .text-foreground {
