--- a/app/globals.css
+++ b/app/globals.css
@@ -1,41 +1,49 @@
 @import "tailwindcss";
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-light.woff2') format('woff2');
+  font-family: 'SF Mono';
+  src: url('/fonts/SFMono-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-medium.woff2') format('woff2');
+  font-family: 'SF Mono';
+  src: url('/fonts/SFMono-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SF Mono';
+  src: url('/fonts/SFMono-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-bold.woff2') format('woff2');
+  font-family: 'SF Mono';
+  src: url('/fonts/SFMono-Semibold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SF Mono';
+  src: url('/fonts/SFMono-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-thin.woff2') format('woff2');
-  font-weight: 100;
+  font-family: 'SF Mono';
+  src: url('/fonts/SFMono-Heavy.woff2') format('woff2');
+  font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
@@ -84,19 +92,19 @@ html {
 }
 
 body {
-  font-family: 'Helvetica Neue', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-family: 'SF Mono', 'Menlo', 'Monaco', 'Courier New', monospace;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-display: swap;
 }
 
-h1, h3 {
-  font-weight: 400;
+h1, h2, h3 {
+  letter-spacing: -0.01em;
 }
 
 h2{
-  font-weight: 500;
+  font-weight: 600;
   color: rgb(var(--heading));
 }
 
