Font files update

--- a/src/apps/About/About.css
+++ b/src/apps/About/About.css
@@ -1,6 +1,6 @@
 .about-app {
   padding: 20px;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   color: #fff;
   max-width: 500px;
 }
