--- a/src/apps/Experience/Experience.css
+++ b/src/apps/Experience/Experience.css
@@ -1,6 +1,6 @@
 .experience-app {
   padding: 20px;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   color: #fff;
   max-width: 500px;
 }
@@ -150,7 +150,7 @@
 .experience-detail,
 .education-detail {
   padding: 20px;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   color: #fff;
   max-width: 500px;
 }
