--- a/src/apps/Projects/Projects.css
+++ b/src/apps/Projects/Projects.css
@@ -1,6 +1,6 @@
 .projects-app {
   padding: 20px;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   color: #fff;
   max-width: 500px;
 }
@@ -90,7 +90,7 @@
 
 .project-detail {
   padding: 20px;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   color: #fff;
   max-width: 500px;
 }
